# investment-research-crew

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  rabbitmq-docker-compose.yml  state.json
.github/workflows/: pylint.yml
src/investment_research_crew/: api.py  config.py  main.py
src/investment_research_crew/agents/: content_agents.py  crewsupport_agents.py
src/investment_research_crew/crews/: content_crew.py  content_crews.py  crewsupport_crews.py
src/investment_research_crew/crews/testcrew/: checkpoint.py  crew_agents.py  queue_bus.py  start_flow.py  worker_research.py  worker_writer.py
src/investment_research_crew/llm/: llm.py
src/investment_research_crew/models/: content_request.py  crewsupport_request.py
src/investment_research_crew/tasks/: content_tasks.py  crewsupport_tasks.py  plan_task.py
src/investment_research_crew/tools/: crewsupport_tools.py
tests/: test_smoke.py
