[project]
name = "investment-research-crew"
version = "0.1.0"
description = "Crew ai for investment research reports generation and analysis."
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Nihar Malali", email = "blitznihar@gmail.com"}]
classifiers = [
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "pylint>=4.0.4",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.13",
]


[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]